@@ -1,0 +1,45 @@
+/* -*-C++-*- */
+/* rglclock - Rotating GL Clock.
+   Copyright (C) 1998, 1999 Hypercore Software Design, Ltd.
+
+   This program is free software; you can redistribute it and/or
+   modify it under the terms of the GNU General Public License as
+   published by the Free Software Foundation; either version 2 of the
+   License, or (at your option) any later version.
+
+   This program is distributed in the hope that it will be useful, but
+   WITHOUT ANY WARRANTY; without even the implied warranty of
+   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+   General Public License for more details.
+
+   You should have received a copy of the GNU General Public License
+   along with this program; if not, write to the Free Software
+   Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA
+   02111-1307, USA.
+
+   As a special exception, you may copy and distribute this program
+   linked with an OpenGL library in executable form without the source
+   code for the library, only if such distribution is not prohibited
+   by the library's license.  */
+
+#ifndef PROFILE_H
+#define PROFILE_H 1
+
+#include "glclock.h"
+#include <string>
+
+struct xmlDoc;
+
+class profile
+{
+private:
+  std::string file_name;
+public:
+  profile(const char *);
+  ~profile();
+public:
+  void restore(glclock *);
+  void save(glclock *);
+};
+
+#endif /* not PROFILE_H */
